src/test/ui/regions/regions-close-object-into-object-4.nll.stderr
error[E0310]: the parameter type `U` may not live long enough
  --> $DIR/regions-close-object-into-object-4.rs:9:5
   |
LL |     Box::new(B(&*v)) as Box<dyn X>
   |     ^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `U: 'static`...

error[E0310]: the parameter type `U` may not live long enough
  --> $DIR/regions-close-object-into-object-4.rs:9:5
   |
LL |     Box::new(B(&*v)) as Box<dyn X>
   |     ^^^^^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `U: 'static`...

error[E0310]: the parameter type `U` may not live long enough
  --> $DIR/regions-close-object-into-object-4.rs:9:5
   |
LL |     Box::new(B(&*v)) as Box<dyn X>
   |     ^^^^^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `U: 'static`...

error: lifetime may not live long enough
  --> $DIR/regions-close-object-into-object-4.rs:9:5
   |
LL | fn i<'a, T, U>(v: Box<dyn A<U>+'a>) -> Box<dyn X + 'static> {
   |      -- lifetime `'a` defined here
LL |     Box::new(B(&*v)) as Box<dyn X>
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`
   |
   = help: consider replacing `'a` with `'static`

error[E0515]: cannot return value referencing local data `*v`
  --> $DIR/regions-close-object-into-object-4.rs:9:5
   |
LL |     Box::new(B(&*v)) as Box<dyn X>
   |     ^^^^^^^^^^^---^^^^^^^^^^^^^^^^
   |     |          |
   |     |          `*v` is borrowed here
   |     returns a value referencing data owned by the current function

error[E0310]: the parameter type `U` may not live long enough
  --> $DIR/regions-close-object-into-object-4.rs:9:14
   |
LL |     Box::new(B(&*v)) as Box<dyn X>
   |              ^^^^^^
   |
   = help: consider adding an explicit lifetime bound `U: 'static`...

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0310, E0515.
For more information about an error, try `rustc --explain E0310`.
